<resources>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="filebrowser_name">File Browser</string>
    <string name="action_about">About</string>
    <string name="action_units">Select units</string>
    <string name="action_lv">Active watch face</string>
    <string name="action_classic">Classic watch face</string>
    <string name="action_exit">Exit</string>
    <string name="version_name" translatable="false">versionName: %1$s</string>
    <string name="about_app" translatable="false">&#169;2015&#8211;2017 nwg (Piotr Miller)</string>
    <string name="gnugpl">This program is free software; you can redistribute it and/or modify
    it under the terms of the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License version 3.0</a>, as published by
    the Free Software Foundation.</string>
    <string name="credits_btn" translatable="false">Credits</string>
    <string name="manual_btn" translatable="false">Wiki</string>
    <string name="credits_karambola_copy">- GPX format import/export/manipulation tools;
        \n- POI/routes view filtering and sorting;
        \n- Path Simplifier - the Track2Route on the fly conversion and route optimization engine;
        \n&#169;2016 Karambola (Afonso Santos).
    </string>
    <string name="credits">Credits</string>
    <string name="title_no_device_connected">No wearable device is currently connected.</string>
    <string name="ok_no_device_connected">OK</string>
    <string name="gps_searching">GPS: Searching</string>
    <string name="gps_poor">GPS: Poor</string>
    <string name="gps_average">GPS: Average</string>
    <string name="gps_good">GPS: Good</string>
    <string name="gps_excellent">GPS: Excellent</string>
    <string name="pro_unknown">License: unknown</string>
    <string name="pro_disabled">License: free</string>
    <string name="pro_checking">License: checking</string>
    <string name="pro_enabled">License: pro</string>
    <string name="node_id">Connected node</string>
    <string name="stats_time">ELA:</string>
    <string name="stats_dst">DST:</string>
    <string name="stats_avs">ASP:</string>
    <string name="stats_counter"># of trips:</string>
    <string name="more">Navigation settings</string>
    <string name="widget_empty">---</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="nautical">Nautical</string>
    <string-array name="units_array">
        <item>@string/metric</item>
        <item>@string/imperial</item>
        <item>@string/nautical</item>
    </string-array>
    <string name="swap">Widgets swapping:</string>
    <string name="swap_10">10 seconds</string>
    <string name="swap_5">5 seconds</string>
    <string name="swap_2">2 seconds</string>
    <string name="swap_1">1 second</string>
    <string-array name="swap_array">
        <item>@string/swap_10</item>
        <item>@string/swap_5</item>
        <item>@string/swap_2</item>
        <item>@string/swap_1</item>
    </string-array>
    <string name="time_of_sunrise">SRI (Time of sunrise)</string>
    <string name="time_of_sunset">SSE (Time of sunset)</string>
    <string name="time_to_sunrise">2SR (Time to sunrise)</string>
    <string name="time_to_sunset">2SS (Time to sunset)</string>
    <string name="azimuth">AZI (Azimuth)</string>
    <string name="bearing">BEA (Bearing)</string>
    <string name="heading">HEA (Heading)</string>
    <string name="deviation">DEV (Deviation)</string>
    <string name="current_speed">SPD (Current speed)</string>
    <string name="avs">ASP (Average speed)</string>
    <string name="ete">ETE (Est. Time Enroute)</string>
    <string name="eta">ETA (Est. Time of Arrival)</string>
    <string name="msp">MSP (Maximum speed)</string>
    <string name="smg">SMG (Speed Made Good)</string>
    <string name="odo">DST (Distance made)</string>
    <string name="ela">ELA (Time elapsed)</string>
    <string name="alt">ALT (Altitude)</string>
    <string name="widget_off">Turned off</string>
    <string name="steps">STE (Steps counter)</string>
    <string name="lv_heading">HEA (Heading)</string>
    <string name="lv_bearing">BEA (Relative bearing)</string>
    <string name="doc">DOC (Distance Off Course)</string>
    <string-array name="widgets_settings_array">
        <item>@string/time_of_sunrise</item>
        <item>@string/time_of_sunset</item>
        <item>@string/time_to_sunrise</item>
        <item>@string/time_to_sunset</item>
        <item>@string/azimuth</item>
        <item>@string/heading</item>
        <item>@string/bearing</item>
        <item>@string/current_speed</item>
        <item>@string/avs</item>
        <item>@string/msp</item>
        <item>@string/smg</item>
        <item>@string/ete</item>
        <item>@string/eta</item>
        <item>@string/odo</item>
        <item>@string/ela</item>
        <item>@string/alt</item>
    </string-array>
    <string name="time_date">T&amp;D (Time and date)</string>
    <string-array name="lo_vis_active_array">
        <item>@string/current_speed</item>
        <item>@string/avs</item>
        <item>@string/msp</item>
        <item>@string/smg</item>
        <item>@string/ete</item>
        <item>@string/eta</item>
        <item>@string/ela</item>
        <item>@string/odo</item>
        <item>@string/time_date</item>
        <item>@string/alt</item>
        <item>@string/steps</item>
        <item>@string/time_of_sunrise</item>
        <item>@string/time_of_sunset</item>
        <item>@string/time_to_sunrise</item>
        <item>@string/time_to_sunset</item>
        <item>@string/lv_heading</item>
        <item>@string/lv_bearing</item>
        <item>@string/doc</item>

    </string-array>
    <string name="lv_refresh_10">10  seconds</string>
    <string name="lv_refresh_5">5 seconds</string>
    <string name="lv_refresh_2">2 seconds</string>
    <string name="lv_refresh_1">1 second</string>
    <string-array name="refresh_array">
        <item>@string/lv_refresh_5</item>
        <item>@string/lv_refresh_2</item>
        <item>@string/lv_refresh_1</item>
    </string-array>
    <string name="clock_24h" translatable="false">24h</string>
    <string name="clock_12h" translatable="false">12h</string>
    <string-array name="clock_array">
        <item>@string/clock_12h</item>
        <item>@string/clock_24h</item>
    </string-array>
    <string name="set1">Set 1</string>
    <string name="set2">Set 2</string>
    <string name="set3">Set 3</string>
    <string name="active">Active</string>
    <string name="ambient">Ambient</string>
    <string name="square">Square</string>
    <string name="button_swap">Sets 1/2 swap rate:\n</string>
    <string name="button_refresh">GPS/Screen refresh rate:\n</string>
    <string name="button_units">Units:\n</string>
    <string name="button_speed">Speed history:\n</string>
    <string name="button_threshold">Proximity threshold:\n</string>
    <string name="button_clock">Time format:\n</string>
    <string name="button_insert_start">Start/End</string>
    <string name="button_end_here">End here</string>
    <string name="wp_name">Enter name</string>
    <string name="route_hintify">Add hints</string>
    <string name="route_dehintify">Clear hints</string>
    <string name="track_reduce">Optimization</string>
    <string name="restore_defaults">Restore defaults</string>
    <string name="restore_defaults_message">This will restore default settings for both watch faces. Continue?</string>
    <string name="dialog_about" translatable="false">Rambler GPX Editor</string>
    <string name="dialog_advanced">Navigation settings</string>
    <string name="dialog_stats">Statistics</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_read_more">Read more</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete">Delete</string>
    <string name="convert_min_points_dst">Min points distance (m)</string>
    <string name="convert_max_points_dst">Max points distance (m)</string>
    <string name="convert_bearing_variation">Trigger bearing variation (deg)</string>
    <string name="convert_corner_angle">Trigger corner angle (deg)</string>
    <string name="convert_corners_dst">Min corners distance (m)</string>
    <string name="poi_edit_name_label">Name:</string>
    <string name="poi_edit_name_edit">unnamed</string>
    <string name="poi_edit_time">Time unknown</string>
    <string name="poi_edit_elevation_label">Ele (m):</string>
    <string name="poi_edit_description_label">Description:</string>
    <string name="route_edit_number_label">Number</string>
    <string name="map_reverse_route">Reverse route</string>
    <string name="routes_new_manually">Draw manually</string>
    <string name="routes_new_auto">Draw automatically</string>
    <string name="routes_edit_import_routes">Import routes</string>
    <string name="routes_edit_convert_tracks">Import tracks</string>
    <string name="routes_clear">Clear all routes</string>
    <string name="routes_edit_export_multiple">Export</string>
    <string name="routes_edit_selected">Edit selected</string>
    <string name="routes_simplify_selected">Optimize selected</string>
    <string name="routes_delete_selected">Delete selected</string>
    <string name="routes_display">Visibility</string>
    <string name="routes_display_show_start">Start points</string>
    <string name="routes_display_show_end">End points</string>
    <string name="routes_display_show_labels">Name labels</string>
    <string name="tracks_edit_properties">Edit properties</string>
    <string name="tracks_clear_all">Clear all tracks</string>
    <string name="tracks_import">Import tracks</string>
    <string name="tracks_export">Export tracks</string>
    <string name="translations">German translations: Stefan Scherrer</string>
    <string name="poi">POI</string>
    <string name="license_apache20" translatable="false">Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></string>
    <string name="license_gpl30" translatable="false">Licensed under the <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3.0</a></string>
    <string name="license_gnuelesser" translatable="false">Licensed under the <a href="https://www.gnu.org/licenses/lgpl-3.0.en.html">GNU Lesser General Public License Version 3</a></string>
    <string name="license_bsd2clause" translatable="false">Licensed under the <a href="https://opensource.org/licenses/BSD-2-Clause">2-clause BSD license</a></string>
    <string name="license_demo_server" translatable="false">The Route Creator activity depends on routing from OSRM Demo Server, and the <a href="https://opendatacommons.org/licenses/odbl">ODbl license</a> applies to it.</string>
    <string name="credits_aosp_name" translatable="false"><a href="https://source.android.com">Android Open Source Project</a></string>
    <string name="credits_aosp_copy" translatable="false">&#169; 2017 The Android Open Source Project.</string>
    <string name="credits_karambola_name" translatable="false"><a href="https://sourceforge.net/projects/geokarambola">GeoKarambola library</a></string>
    <string name="credits_osmdroid_name" translatable="false"><a href="https://github.com/osmdroid/osmdroid">osmdroid</a></string>
    <string name="credits_osmbonuspack_name" translatable="false"><a href="https://github.com/MKergall/osmbonuspack">OSMBonusPack</a></string>
    <string name="credits_osrm_name" translatable="false"><a href="http://project-osrm.org">Open Source Routing Machine</a></string>
    <string name="credits_filebrowser_name" translatable="false"><a href="https://github.com/vaal12/AndroidFileBrowser">AndroidFileBrowser</a></string>
    <string name="credits_filebrowser_copy" translatable="false">&#169; Alexey Vassiliev</string>
</resources>