<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TableRow>

            <EditText android:id="@+id/min_wpt_dst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:maxLength="6"
                android:layout_weight="1"/>

            <TextView android:id="@+id/min_points_dst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_min_points_dst"
                android:layout_weight="4"/>

        </TableRow>

        <TableRow>

            <EditText android:id="@+id/max_wpt_dst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:layout_weight="1"/>

            <TextView android:id="@+id/max_points_dst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_max_points_dst"
                android:layout_weight="4"/>

        </TableRow>

        <TableRow>

            <EditText android:id="@+id/bearing_variation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:maxLength="6"
                android:layout_weight="1"/>

            <TextView android:id="@+id/bearing_var"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_bearing_variation"
                android:layout_weight="4"/>

        </TableRow>

        <TableRow>

            <EditText android:id="@+id/corner_angle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:maxLength="6"
                android:layout_weight="1"/>

            <TextView android:id="@+id/corner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_corner_angle"
                android:layout_weight="4"/>

        </TableRow>

        <TableRow>

            <EditText android:id="@+id/corner_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:layout_weight="1"/>

            <TextView android:id="@+id/corner_dst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_corners_dst"
                android:layout_weight="4"/>

        </TableRow>

    </TableLayout>



</LinearLayout>